# Metis-Web

./: .env.example  .gitignore  AI.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
api/: requirements.txt
api/app/: __init__.py  config.py  main.py
docs/: AI.md  api-beta-plan.md  design-system-logic.md  external-auth-bridge-flow.md  front-facing-foundation.md  git-segmentation.md  implementation-flow.md  magic-link-launch.md  master-copy.md  post-mortem.md  production-roadmap.md  repo-alignment.md  runtime-secrets-flow.md
docs/communication-contracts/: README.md  access-state-contract.md  api-upload-contract.md  auth-contract.md  communication-build-track.md  extension-internal-contract.md  external-auth-bridge-contract.md  website-backend-contract.md
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/account/: account-section-page.tsx  loading.tsx  page.tsx
src/app/account-deleted/: page.tsx
src/app/forgot-password/: page.tsx  route.ts
src/app/logged-in/: loading.tsx  page.tsx
src/app/privacy/: page.tsx
src/app/reset-password/: page.tsx  route.ts
src/app/sign-in/: page.tsx
src/app/sign-up/: page.tsx
src/app/support/: page.tsx
src/app/terms/: page.tsx
src/app/verify/: page.tsx  route.ts
src/content/: authCopy.ts  frontFacingCopy.ts
src/lib/: account-data.ts  auth-server.ts  auth.ts  env.ts  seo.ts  site.ts  temp-auth-client.ts  temp-auth.ts
supabase/migrations/: 20260403_000001_app_account_tables.sql  20260411_000002_tracked_sites.sql
(+50 files in other folders)
